--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
           {% if current_user %}
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('profile') }}">
-                {{ current_user.first_name }}
+                личный кабинет
               </a>
             </li>
             {% if current_user.role == 'admin' %}
